2003-01-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tools/mpexpand: Added new tool. Linux/ix86 starpack containing a
	  doctools processor.

	* tools/nroff_regen:             Rewritten to use mpexpand for most
	* tools/manpage_regen:           conversions. The conversion to HTML
	* tools/rules/manpage.html.site: for the website still relies on the
          old expand system. Writing a good formatting engine for that,
	  even if derived from the doctools HTML engine takes more time
	  than I want to invest right now. Rewriting the rules file
	  instead. That was less work.

	* doc/fifo.man:    The original contents were written
	* doc/fifo2.man:   in a precursor format to doctools.
	* doc/memchan.man: Now rewritten to conform to the
	* doc/null.man:    doctools specification.
	* doc/random.man: 

2002-11-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* win/makefile.vc (MCOBJS): Updated to list all relevant object
	  files.

2002-10-15  Andreas Kupries  <andreask@activestate.com>

	* configure.in: Changed to propagate an initial CFLAGS value to
	  the final definition. A TEA condition (SHARED_BUILD == 1)
	  squashed it, causing it the build system to loose the
	  +DAportable we specify for the AS PA-RISC2.2 build host. This is
	  a problem for _all_ TEA and TEA 2 based configure files.

2002-10-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in ($($(PACKAGE)stub_LIB_FILE)): Fixed copy/paste
	  error. Do not use AR explicitly.
	  (MAKE_STUB_LIB): S.a.

2002-08-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* === Release 2.2a4  available ===

2002-08-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in:
	* aclocal.m4:
	* configure.in: New, from tcl/sampleextension, modified for
	  Memchan. Essentially an update to the new TEA.

	* tclconfig/: New. Configure definitions and other
	  helpers. Straight out of tcl/sampleextension.

	* tcl.m4:
	* install-sh: