@@ -7,10 +7,12 @@
 rm -f ../tools/rules/manpages
 touch ../tools/rules/manpages
 
+tclsh="$1"
+
 for i in `ls *.man`
 do
 	echo $i '-->' manpages
-	../tools/mpexpand list $i - | \
+	$tclsh ../tools/mpexpand.tcl list $i - | \
 	    awk "{ print \$2 }" | \
 	    sed -e 's|^\(.*\)$|manpage mem/mp/\1 \1 mp.\1.html|' |
 	    cat >> ../tools/rules/manpages
@@ -22,5 +24,5 @@ done
 for i in `ls *.man`
 do
 	echo $i '-->' `basename $i .man`.n
-	../tools/mpexpand nroff $i - > `basename $i .man`.n
+	$tclsh ../tools/mpexpand.tcl nroff $i - > `basename $i .man`.n
 done
